{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 1974,
  "lineage": "30380b3b-b3ec-87ca-2762-7a047e6d309a",
  "resources": [
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00957690e1ae43496",
            "domain": "vpc",
            "id": "eipalloc-00957690e1ae43496",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-170-7-205.compute-1.amazonaws.com",
            "public_ip": "35.170.7.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00957690e1ae43496",
            "association_id": "eipassoc-09729b283cc0151d0",
            "connectivity_type": "public",
            "id": "nat-006986911e9b309c1",
            "network_interface_id": "eni-0841900cd3df2826f",
            "private_ip": "10.1.1.44",
            "public_ip": "35.170.7.205",
            "subnet_id": "subnet-01b023d28cd6dfc01"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.win_network.aws_subnet.pub_subnet_1",
            "module.win_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275560321332:route-table/rtb-01629d25ed24e4c0f",
            "id": "rtb-01629d25ed24e4c0f",
            "owner_id": "275560321332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-006986911e9b309c1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "1_win_pvt-route-table"
            },
            "tags_all": {
              "Name": "1_win_pvt-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0121712b84695f08e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat_gateway",
            "module.win_network.aws_subnet.pub_subnet_1",
            "module.win_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0365a61f358653e9d",
            "route_table_id": "rtb-01629d25ed24e4c0f",
            "subnet_id": "subnet-05b27a6080f666c77"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat_gateway",
            "module.nat.aws_route_table.private_route_table",
            "module.nat.aws_subnet.pvt_subnet",
            "module.win_network.aws_subnet.pub_subnet_1",
            "module.win_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee6ce4f561e0ecf3",
            "route_table_id": "rtb-01629d25ed24e4c0f",
            "subnet_id": "subnet-099b1f077064ecd9c"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat_gateway",
            "module.nat.aws_route_table.private_route_table",
            "module.nat.aws_subnet.pvt_subnet_1",
            "module.win_network.aws_subnet.pub_subnet_1",
            "module.win_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275560321332:subnet/subnet-05b27a6080f666c77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b27a6080f666c77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275560321332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1_win_pvt_sub"
            },
            "tags_all": {
              "Name": "1_win_pvt_sub"
            },
            "vpc_id": "vpc-0121712b84695f08e"
          },
          "dependencies": [
            "module.win_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275560321332:subnet/subnet-099b1f077064ecd9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099b1f077064ecd9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275560321332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1_win_pvt_sub_1"
            },
            "tags_all": {
              "Name": "1_win_pvt_sub_1"
            },
            "vpc_id": "vpc-0121712b84695f08e"
          },
          "dependencies": [
            "module.win_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275560321332:security-group/sg-0bccd74021e55810f",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bccd74021e55810f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "275560321332",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0121712b84695f08e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.win_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.win_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275560321332:internet-gateway/igw-0e08636813f7e335b",
            "id": "igw-0e08636813f7e335b",
            "owner_id": "275560321332",
            "tags": {
              "Name": "1_win"
            },
            "tags_all": {
              "Name": "1_win"
            },
            "vpc_id": "vpc-0121712b84695f08e"
          },
          "dependencies": [
            "module.win_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.win_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275560321332:route-table/rtb-081f7b14d13725308",
            "id": "rtb-081f7b14d13725308",
            "owner_id": "275560321332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e08636813f7e335b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "1_win"
            },
            "tags_all": {
              "Name": "1_win"
            },
            "timeouts": null,
            "vpc_id": "vpc-0121712b84695f08e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.win_network.aws_internet_gateway.hub_vpc",
            "module.win_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.win_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6b17fa5498f2ac4",
            "route_table_id": "rtb-081f7b14d13725308",
            "subnet_id": "subnet-01b023d28cd6dfc01"
          },
          "dependencies": [
            "module.win_network.aws_internet_gateway.hub_vpc",
            "module.win_network.aws_route_table.public",
            "module.win_network.aws_subnet.pub_subnet_1",
            "module.win_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.win_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06325dfc56802d6aa",
            "route_table_id": "rtb-081f7b14d13725308",
            "subnet_id": "subnet-06dd02617326b6561"
          },
          "dependencies": [
            "module.win_network.aws_internet_gateway.hub_vpc",
            "module.win_network.aws_route_table.public",
            "module.win_network.aws_subnet.pub_subnet_2",
            "module.win_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.win_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275560321332:subnet/subnet-01b023d28cd6dfc01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b023d28cd6dfc01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275560321332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1_win_pub_sub_1"
            },
            "tags_all": {
              "Name": "1_win_pub_sub_1"
            },
            "vpc_id": "vpc-0121712b84695f08e"
          },
          "dependencies": [
            "module.win_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.win_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275560321332:subnet/subnet-06dd02617326b6561",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dd02617326b6561",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275560321332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1_win_pub_sub_2"
            },
            "tags_all": {
              "Name": "1_win_pub_sub_2"
            },
            "vpc_id": "vpc-0121712b84695f08e"
          },
          "dependencies": [
            "module.win_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.win_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275560321332:vpc/vpc-0121712b84695f08e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-04fda3b2d3c68a84d",
            "default_route_table_id": "rtb-08466a516f30cdfb9",
            "default_security_group_id": "sg-05a68c3f1b468d5b3",
            "dhcp_options_id": "dopt-0961670f4125ca700",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0121712b84695f08e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08466a516f30cdfb9",
            "owner_id": "275560321332",
            "tags": {
              "Name": "1_win_infra"
            },
            "tags_all": {
              "Name": "1_win_infra"
            }
          }
        }
      ]
    }
  ]
}